# client

./: .gitattributes  .gitignore  .gitmodules  3rdparty.sln  CMakeLists.txt  Client.sln  README.md
src/client/: CMakeLists.txt  client.vcxproj  client.vcxproj.filters
src/client/res/: client.rc
src/client/res/cursor/: Attack.cur  Default.cur  Item_pick.cur  Npc.cur  cursor1.cur  identify.cur  item_invem.cur  noui01.cur  repair.cur
src/client/src/: AppMsgQ.cpp  AppMsgQ.h  BULLET.CPP  BULLET.H  CApplication.cpp  CApplication.h  CAvatarState.cpp  CAvatarState.h  CCamera.cpp  CCamera.h  CClientStorage.cpp  CClientStorage.h  CGameOBJ.cpp  CGameOBJ.h  CJustModelAVT.cpp  CJustModelAVT.h  CModelCHAR.cpp  CModelCHAR.h  CObjCART.cpp  CObjCART.h  CObjCHAR.cpp  CObjCHAR.h  CObjCHAR_ActionFrame.cpp  CObjCHAR_Collision.cpp  CObjCHAR_Collision.h  CObjFIXED.cpp  CObjFIXED.h  CObjGROUND.cpp  CObjGROUND.h  CObjMORPH.cpp  CObjMORPH.h  CObjUSER.cpp  CObjUSER.h  CSkyDOME.cpp  CSkyDOME.h  CViewMSG.cpp  CViewMSG.h  CharPartEffect.cpp  CommandFilter.cpp  CommandFilter.h  (+47 more)
src/client/src/AI_LIB/: AI_Action.cpp  AI_Condition.cpp  CAI_FILE.CPP  CAI_FILE.H  CAI_LIB.H
src/client/src/Common/: CEconomy.cpp  CEconomy.h  CHotICON.cpp  CHotICON.h  CInventory.cpp  CInventory.h  CItem.cpp  CItem.h  CObjAI.cpp  CObjAI.h  CQuest.cpp  CQuest.h  CRegenAREA.cpp  CRegenAREA.h  CUserDATA.cpp  CUserDATA.h  Calculation.cpp  Calculation.h  DataTYPE.h  IO_AI.CPP  IO_AI.H  IO_Motion.cpp  IO_Motion.h  IO_PAT.H  IO_PAT.cpp  IO_Quest.cpp  IO_Quest.h  IO_STB.cpp  IO_Skill.cpp  IO_Skill.h  io_stb.h
src/client/src/Event/: CEvent.cpp  CEvent.h  GF_EFFECT.CPP  GF_ITEM.CPP  GF_SYSTEM.CPP  QF_CONVERSATION.CPP  QF_QUEST.CPP  QF_SKILL.CPP  QuestRewardQueue.cpp  QuestRewardQueue.h  Quest_FUNC.h
src/client/src/GameCommon/: CDelegatedObservable.cpp  CDelegatedObservable.h  CFilterWord.cpp  CFilterWord.h  CItemEquip.cpp  CItemEquip.h  CItemEtc.cpp  CItemEtc.h  CItemPat.cpp  CItemPat.h  CItemUse.cpp  CItemUse.h  CObservable.cpp  CObservable.h  CSkillCommand.cpp  CSkillCommand.h  IObserver.cpp  IObserver.h  Item.cpp  Item.h  ItemCommand.h  LngTbl.cpp  LngTbl.h  ReloadProcess.cpp  ReloadProcess.h  Skill.cpp  Skill.h  StringManager.cpp  StringManager.h  iconcommand.cpp  iconcommand.h  itemcommand.cpp
src/client/src/GameData/: CBank.cpp  CBank.h  CChatRoom.cpp  CChatRoom.h  CClan.cpp  CClan.h  CCommunity.cpp  CCommunity.h  CDealData.cpp  CDealData.h  CDecomposition.cpp  CDecomposition.h  CExchange.cpp  CExchange.h  CGameDataCreateAvatar.cpp  CGameDataCreateAvatar.h  CManufacture.cpp  CManufacture.h  CParty.cpp  CParty.h  CPrivateStore.cpp  CPrivateStore.h  CRequireMaterial.cpp  CRequireMaterial.h  CSeparate.cpp  CSeparate.h  CStore.cpp  CStore.h  CStoreUnion.cpp  CStoreUnion.h  CUpgrade.cpp  CUpgrade.h  ServerList.cpp  ServerList.h
src/client/src/GameProc/: BGMManager.cpp  BGMManager.h  CDayNNightProc.cpp  (+31 more)
src/tgamectrl/: CMakeLists.txt  tgamectrl.vcxproj  tgamectrl.vcxproj.filters
src/tgamectrl/res/: tgamectrl.rc
src/tgamectrl/src/: ActionEvent.cpp  ActionListenerList.cpp  JComboBox.cpp  JContainer.cpp  JString.cpp  JStringParser.cpp  JTable.cpp  ResourceMgr.cpp  SplitHangul.cpp  TButton.cpp  TCaption.cpp  TCommandQ.cpp  TContainer.cpp  TContainerItem.cpp  TControlMgr.cpp  TDefaultListCellRenderer.cpp  TDefaultTreeModel.cpp  TDefaultTreeNodeRenderer.cpp  TDialog.cpp  TEditBox.cpp  TGameCtrl.cpp  TListBox.cpp  TListCellRenderer.cpp  TMsgBox.cpp  TObject.cpp  TRadioBox.cpp  TRadioButton.cpp  TScrollBar.cpp  TSplitString.cpp  TStatic.cpp  TTIme.cpp  TabbedPane.cpp  Tree.cpp  TreePath.cpp  WinCtrl.cpp  stdafx.h
src/triggerinfo/: CMakeLists.txt  triggerinfo.vcxproj  triggerinfo.vcxproj.filters
src/triggerinfo/src/: AdapterInfo.cpp  CpuInfo.cpp  SysInfo.cpp  TriggerInfo.cpp  __d3d9.cpp  reg.cpp
src/triggervfs/: CMakeLists.txt  triggervfs.vcxproj  triggervfs.vcxproj.filters
src/triggervfs/res/: RCa06892  triggervfs.rc
src/triggervfs/src/: BlankInfo.cpp  TriggerVFS.cpp  classCRC.cpp  libCrc.cpp  libFile.cpp  libString.cpp  stdafx.h
src/znzin/: CMakeLists.txt  znzin.vcxproj  znzin.vcxproj.filters
src/znzin/include/: zz_assert.h  zz_autolock.h  zz_bone.h  zz_camera_follow.h  zz_channel.h  zz_channel_position.h  zz_channel_rotation.h  zz_channel_x.h  zz_critical_section.h  zz_device_resource.h  zz_event.h  zz_font_d3d.h  zz_font_texture_d3d.h  zz_index_buffer.h  zz_interface.h  zz_light.h  zz_light_direct.h  zz_light_point.h  zz_list.h  zz_lod.h  zz_manager_sound.h  zz_manager_texture.h  zz_material_ocean.h  zz_material_sky.h  zz_material_terrain.h  zz_mesh.h  zz_mesh_terrain.h  zz_mesh_tool.h  zz_morpher.h  zz_motion.h  zz_motion_controller.h  zz_node_type.h  zz_ocean_block.h  zz_os.h  zz_particle.h  zz_particle_emitter.h  zz_particle_event.h  zz_pointer.h  zz_profiler.h  zz_recycling_array.h  (+29 more)
src/znzin/maxexp/: zz_max_exporter.h  zz_max_exporter_mesh.cpp  zz_max_exporter_mesh.h  zz_max_exporter_model.cpp  zz_max_exporter_model.h  zz_max_exporter_motion.cpp
src/znzin/maximp/: zz_max_importer.cpp  zz_max_importer.def
src/znzin/maxscr/: HeightsMapLoad.ms  HeightsMapLoadVM.ms  export_meshes.ms  znChannel.ms  znChannelFunc.ms  znDetach.ms  znDetach_ui.ms  znOBBox.ms  znObjectViewer.vms  znProperty.vms  znSkin.ms_  znTool.ms
src/znzin/res/: version_info.rc
src/znzin/shader/: bumpmap.vsh
src/znzin/src/: zz_algebra.cpp  zz_assert.cpp  zz_bvolume.cpp  zz_bvolume_obb.cpp  zz_camera.cpp  zz_camera_follow.cpp  zz_channel.cpp  zz_channel_x.cpp  zz_channel_xy.cpp  zz_db.cpp  zz_dx_version.cpp  zz_error.cpp  zz_event.cpp  zz_font_d3d.cpp  zz_font_texture.cpp  zz_gamma.cpp  zz_index_buffer.cpp  zz_interface.cpp  zz_light.cpp  zz_light_direct.cpp  zz_light_omni.cpp  zz_light_point.cpp  zz_log.cpp  zz_main.cpp  zz_manager_font.cpp  zz_manager_sound.cpp  zz_manager_texture.cpp  zz_material_colormap.cpp  zz_material_ocean.cpp  zz_material_terrain.cpp  zz_mem.cpp  zz_mesh.cpp  zz_mesh_ocean.cpp  zz_mesh_terrain.cpp  zz_mesh_tool.cpp  zz_model.cpp  zz_morpher.cpp  zz_motion_controller.cpp  zz_motion_mixer.cpp  zz_motion_tool.cpp  (+26 more)
(+1708 files in other folders)
