cmake_minimum_required(VERSION 3.11 FATAL_ERROR)

set(PROJECT TRose)
project(${PROJECT})

include_directories(
  SYSTEM ${SPDLOG_ROOT}
  SYSTEM ${DIRECTX_ROOT}/include
  SYSTEM ${CMAKE_THIRD_PARTY_INCLUDE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  ${CMAKE_CURRENT_SOURCE_DIR}/Interface
  ${CMAKE_CURRENT_SOURCE_DIR}/GameCommon
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_SOURCE_DIR}/Common
)

link_directories(
  ${DIRECTX_ROOT}/lib
  ${CMAKE_THIRD_PARTY_LIBRARY_DIR}
)

add_linker_flags("/SAFESEH:NO")
add_linker_flags("/SUBSYSTEM:WINDOWS")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DZZ_LUA500")

set( GEN_ARGS 
  EXPORT_FILES export_GM.lua export_QF.lua System/export_System.lua
)

set( SOURCES_HEADER
  res/resource.h
  src/Ai_lib/Cai_file.h
  src/Ai_lib/Cai_lib.h
  src/AppMsgQ.h
  src/BULLET.H
  src/CApplication.h
  src/CAvatarState.h
  src/CCamera.h
  src/CClientStorage.h
  src/CGameOBJ.h
  src/CJustModelAVT.h
  src/CModelCHAR.h
  src/CObjCART.h
  src/CObjCHAR.h
  src/CObjCHAR_Collision.h
  src/CObjFIXED.h
  src/CObjGROUND.h
  src/CObjMORPH.h
  src/CObjUSER.h
  src/CommandFilter.h
  src/Common/Calculation.h
  src/Common/CEconomy.h
  src/Common/CHotICON.h
  src/Common/CInventory.h
  src/Common/CItem.h
  src/Common/CObjAI.h
  src/Common/CQuest.h
  src/Common/CRegenAREA.h
  src/Common/CUserDATA.h
  src/Common/DataTYPE.h
  src/Common/IO_AI.H
  src/Common/IO_Motion.h
  src/Common/Io_pat.h
  src/Common/IO_Quest.h
  src/Common/IO_Skill.h
  src/Common/IO_STB.h
  src/Country.h
  src/CSkyDOME.h
  src/CViewMSG.h
  src/Debug.h
  src/Event/CEvent.h
  src/Event/QuestRewardQueue.h
  src/Event/Quest_FUNC.h
  src/Game.h
  src/GameCommon/CDelegatedObservable.h
  src/GameCommon/CFilterWord.h
  src/GameCommon/CItemEquip.h
  src/GameCommon/CItemEtc.h
  src/GameCommon/CItemPat.h
  src/GameCommon/CItemUse.h
  src/GameCommon/CObservable.h
  src/GameCommon/CSkillCommand.h
  src/GameCommon/iconcommand.h
  src/GameCommon/IObserver.h
  src/GameCommon/Item.h
  src/GameCommon/ItemCommand.h
  src/GameCommon/LngTbl.h
  src/GameCommon/ReloadProcess.h
  src/GameCommon/Skill.h
  src/GameCommon/StringManager.h
  src/GameData/CBank.h
  src/GameData/CChatRoom.h
  src/GameData/CClan.h
  src/GameData/CCommunity.h
  src/GameData/CDealData.h
  src/GameData/CDecomposition.h
  src/GameData/CExchange.h
  src/GameData/CGameDataCreateAvatar.h
  src/GameData/CManufacture.h
  src/GameData/CParty.h
  src/GameData/CPrivateStore.h
  src/GameData/CRequireMaterial.h
  src/GameData/CSeparate.h
  src/GameData/CStore.h
  src/GameData/CStoreUnion.h
  src/GameData/CUpgrade.h
  src/GameData/Event/CTEvenSkill.h
  src/GameData/Event/CTEvent.h
  src/GameData/Event/CTEventAvatarStore.h
  src/GameData/Event/CTEventChatRoom.h
  src/GameData/Event/CTEventClan.h
  src/GameData/Event/CTEventClanSkill.h
  src/GameData/Event/CTEventDeal.h
  src/GameData/Event/CTEventExchange.h
  src/GameData/Event/CTEventItem.h
  src/GameData/Event/CTEventManufacture.h
  src/GameData/Event/CTEventParty.h
  src/GameData/Event/CTEventPrivateStore.h
  src/GameData/Event/CTEventSeparate.h
  src/GameData/Event/CTEventServerList.h
  src/GameData/Event/CTEventSkill.h
  src/GameData/Event/CTEventStoreUnion.h
  src/GameData/Event/CTEventUpgrade.h
  src/GameData/ServerList.h
  src/GameProc/BGMManager.h
  src/GameProc/CallGM.h
  src/GameProc/CaptureChatList.h
  src/GameProc/CDayNNightProc.h
  src/GameProc/ChangeActionMode.h
  src/GameProc/ChangeVisibility.h
  src/GameProc/DelayedExp.h
  src/GameProc/ItemInfoView.h
  src/GameProc/LiveCheck.h
  src/GameProc/LoadingImageManager.h
  src/GameProc/MouseTargetEffect.h
  src/GameProc/ObjectTargetEffect.h
  src/GameProc/Objvibration.h
  src/GameProc/PreventDuplicatedCommand.h
  src/GameProc/SkillCommandDelay.h
  src/GameProc/TargetManager.h
  src/GameProc/UseItemDelay.h
  src/Game_FUNC.h
  src/Interface/CChatBox.h
  src/Interface/CClanMarkUserDefined.h
  src/Interface/CClanMarkView.h
  src/Interface/CDigitEffect.h
  src/Interface/CDragItem.h
  src/Interface/CDragNDropMgr.h
  src/Interface/CEnduranceProperty.h
  src/Interface/CHelpMgr.h
  src/Interface/CIndicate.h
  src/Interface/CInfo.h
  src/Interface/CKeyMove.h
  src/Interface/ClanMarkManager.h
  src/Interface/ClanMarkTransfer.h
  src/Interface/CLoading.h
  src/Interface/CNameBox.h
  src/Interface/Command/CTCmdHotExec.h
  src/Interface/Command/CTCmdNumberInput.h
  src/Interface/Command/CTCmdOpenDlg.h
  src/Interface/Command/DragCommand.h
  src/Interface/Command/ExUICommand.h
  src/Interface/Command/UICommand.h
  src/Interface/controls/EffectString.h
  src/Interface/CTDrawImpl.h
  src/Interface/CTFontImpl.h
  src/Interface/CToolTipMgr.h
  src/Interface/CTSoundImpl.h
  src/Interface/CTString.h
  src/Interface/CUIMediator.h
  src/Interface/cursor/CCursor.h
  src/Interface/cursor/CCursorState.h
  src/Interface/cursor/CCursorStateDx.h
  src/Interface/cursor/CCursorStateSprite.h
  src/Interface/cursor/CCursorStateWindow.h
  src/Interface/DamageEffect.h
  src/Interface/DLGs/AvatarInfoDlg.h
  src/Interface/DLGs/BasePAN.h
  src/Interface/DLGs/CAddFriendDlg.h
  src/Interface/DLGs/CAvatarStore.h
  src/Interface/DLGs/CAvatarStoreDlg.h
  src/Interface/DLGs/CBankDlg.h
  src/Interface/DLGs/CBankWindowDlg.h
  src/Interface/dlgs/CChatFilterDlg.h
  src/Interface/DLGs/CChatRoomDlg.h
  src/Interface/DLGs/CClanDlg.h
  src/Interface/DLGs/CCommDlg.h
  src/Interface/DLGs/CDecompositionDlg.h
  src/Interface/DLGs/CDialogDlg.h
  src/Interface/DLGs/CGoodsDlg.h
  src/Interface/DLGs/CharacterDLG.h
  src/Interface/DLGs/ChattingDLG.h
  src/Interface/DLGs/CItemDlg.h
  src/Interface/DLGs/ClanOrganizeDlg.h
  src/Interface/DLGs/ClanRegistNotice.h
  src/Interface/DLGs/CMemoDlg.h
  src/Interface/DLGs/CMemoViewDlg.h
  src/Interface/DLGs/CMenuDlg.h
  src/Interface/DLGs/CMinimapDLG.h
  src/Interface/DLGs/CMsgBox.h
  src/Interface/DLGs/CMsgBoxCartRide.h
  src/Interface/DLGs/CMsgBoxSpecial.h
  src/Interface/DLGs/CNumberInputDlg.h
  src/Interface/DLGs/COptionDlg.h
  src/Interface/DLGs/CPartyDlg.h
  src/Interface/DLGs/CPartyMember.h
  src/Interface/DLGs/CPatDlg.h
  src/Interface/DLGs/CPrivateChatDlg.h
  src/Interface/DLGs/CPrivateStoreDlg.h
  src/Interface/DLGs/CQuestDlg.h
  src/Interface/DLGs/CRestartDLG.h
  src/Interface/DLGs/CSeparateDlg.h
  src/Interface/DLGs/CSkillDLG.h
  src/Interface/DLGs/CStoreDLG.h
  src/Interface/DLGs/CStoreUnionDlg.h
  src/Interface/DLGs/CSystemDLG.h
  src/Interface/DLGs/CSystemMsgDlg.h
  src/Interface/DLGs/CTargetMenu.h
  src/Interface/DLGs/CUpgradeDlg.h
  src/Interface/DLGs/DealDLG.h
  src/Interface/DLGs/DeliveryStoreDlg.h
  src/Interface/DLGs/EventDialog.h
  src/Interface/DLGs/ExchangeDLG.h
  src/Interface/DLGs/HelpDlg.h
  src/Interface/DLGs/InputNameDlg.h
  src/Interface/DLGs/InventoryDLG.h
  src/Interface/DLGs/MakeDLG.h
  src/Interface/DLGs/NotifyButtonDlg.h
  src/Interface/DLGs/NotifyDlg.h
  src/Interface/DLGs/PartyOptionDlg.h
  src/Interface/DLGs/QuickToolBAR.h
  src/Interface/DLGs/SelectEventDlg.h
  src/Interface/DLGs/SkillTreeDlg.h
  src/Interface/DLGs/SubClass/CChatRoomListItem.h
  src/Interface/DLGs/SubClass/CClanSkillListItem.h
  src/Interface/DLGs/SubClass/CDialogNpcScriptAnswerItem.h
  src/Interface/DLGs/SubClass/CDialogNpcScriptAnswerItemNew.h
  src/Interface/DLGs/SubClass/CDialogNpcScriptItem.h
  src/Interface/DLGs/SubClass/CFriendListItem.h
  src/Interface/DLGs/SubClass/CGuage.h
  src/Interface/DLGs/SubClass/ClanMark.h
  src/Interface/DLGs/SubClass/ClanMemberItem.h
  src/Interface/DLGs/SubClass/CMailBoxListItem.h
  src/Interface/DLGs/SubClass/CMakeState.h
  src/Interface/DLGs/SubClass/CMakeStateNormal.h
  src/Interface/DLGs/SubClass/CMakeStateResult.h
  src/Interface/DLGs/SubClass/CMakeStateWait.h
  src/Interface/DLGs/SubClass/CQuestListItem.h
  src/Interface/DLGs/SubClass/CSkillListCellRenderer.h
  src/Interface/DLGs/SubClass/CSkillListItem.h
  src/Interface/DLGs/SubClass/CSlot.h
  src/Interface/DLGs/SubClass/CUpgradeDlgState.h
  src/Interface/DLGs/SubClass/CUpgradeDlgStateNormal.h
  src/Interface/DLGs/SubClass/CUpgradeDlgStateResult.h
  src/Interface/DLGs/SubClass/CUpgradeDlgStateWait.h
  src/Interface/DLGs/TargetObjectDLG.h
  src/Interface/ExternalUI/CCreateAvata.h
  src/Interface/ExternalUI/CExternalUI.h
  src/Interface/ExternalUI/CExternalUIManager.h
  src/Interface/ExternalUI/CLogin.h
  src/Interface/ExternalUI/CSelectAvata.h
  src/Interface/ExternalUI/CSelectChannel.h
  src/Interface/ExternalUI/CSelectServer.h
  src/Interface/ExternalUI/ExternalUILobby.h
  src/Interface/Icon/CIcon.h
  src/Interface/Icon/CIconDialog.h
  src/Interface/Icon/CIconItem.h
  src/Interface/Icon/CIconItemDelivery.h
  src/Interface/Icon/CIconQuick.h
  src/Interface/Icon/CIconSkill.h
  src/Interface/Icon/CIconSkillClan.h
  src/Interface/Icon/CIconSkillDummy.h
  src/Interface/InterfaceType.h
  src/Interface/IO_ImageRes.h
  src/Interface/ITState/CITState.h
  src/Interface/ITState/CITStateAppraisal.h
  src/Interface/itstate/CITStateDead.h
  src/Interface/ITState/CITStateNormal.h
  src/Interface/ITState/CITStateNpcDialog.h
  src/Interface/ITState/CITStateRepair.h
  src/Interface/ITState/CITStateRideCart.h
  src/Interface/ITState/CITStateWaitDisconnect.h
  src/Interface/it_mgr.h
  src/Interface/PersonalStoreManager.h
  src/Interface/slotcontainer/CItemSlot.h
  src/Interface/SlotContainer/ClanSkillSlot.h
  src/Interface/SlotContainer/CSkillSlot.h
  src/Interface/SlotContainer/HotIconSlot.h
  src/Interface/TypeResource.h
  src/IO_Basic.h
  src/IO_Effect.h
  src/IO_Event.h
  src/IO_MATERIAL.H
  src/IO_MESH.H
  src/IO_Model.h
  src/IO_Morpher.h
  src/IO_Skeleton.h
  src/IO_Terrain.h
  src/JCommandState.h
  src/LUA_Func.h
  src/Misc/GameUtil.h
  src/Network/CNetwork.h
  src/Network/RecvPACKET.h
  src/Network/SendPACKET.h
  src/ObjCastleGear.h
  src/OBJECT.h
  src/ObjectActionProcessor.h
  src/ObjectCommand/ObjCommand.h
  src/ObjFixedEvent.h
  src/Sfx/ISFX.h
  src/Sfx/SFXFont.h
  src/Sfx/SFXManager.h
  src/Sfx/SFXWideScreen.h
  src/Sfx/SmoothVisibility.h
  src/Sound/DirectMusicPlayer.h
  src/Sound/IO_Sound.h
  src/Sound/MSSMusicPlayer.h
  src/Sound/MusicMgr.h
  src/Sound/MusicPlayer.h
  src/Sound/OggMusicPlayer.h
  src/Sound/SoundPlayer.h
  src/SqliteDB.h
  src/System/CGame.h
  src/System/CGameState.h
  src/System/CGameStateCreateAvatar.h
  src/System/CGameStateExitMain.h
  src/System/CGameStateLogin.h
  src/System/CGameStateLoginVirtual.h
  src/System/CGameStateMain.h
  src/System/CGameStateMoveMain.h
  src/System/CGameStateNull.h
  src/System/CGameStatePrepareMain.h
  src/System/CGameStatePrepareSelectAvatar.h
  src/System/CGameStateReLogin.h
  src/System/CGameStateSelectAvatar.h
  src/System/CGameStateSelectSvr.h
  src/System/CGameStateTitle.h
  src/System/CGameStateWarp.h
  src/System/GameStateMovePlanet.h
  src/System/GameStateWarning.h
  src/System/SystemProcScript.h
  src/System/System_FUNC.h
  src/System/TCmdSystem.h
  src/Terrain/PatchManager.h
  src/Terrain/RoughMap.h
  src/Terrain/TerrainDef.h
  src/Terrain/WideTerrain.h
  src/Tutorial/LevelUpEvent.h
  src/Tutorial/TutorialEvent.h
  src/Tutorial/TutorialEventManager.h
  src/Tutorial/TutorialEventUtility.h
  src/Util/ADSStream.h
  src/Util/Arcfour/Arcfour.h
  #src/Util/BugGUARD.h
  src/Util/CBITArray.h
  src/Util/CCheat.h
  src/Util/CClientSOCKET.h
  src/Util/CD3DUtil.h
  src/Util/CDSound.h
  src/Util/CFileLIST.h
  src/Util/CFileSystem.h
  src/Util/CFileSystemNormal.h
  src/Util/CFileSystemTriggerVFS.h
  src/Util/CGameSTB.h
  src/Util/CGameStr.h
  src/Util/CheckHack.h
  src/Util/classCRC.h
  src/Util/classHASH.h
  src/Util/classHTTP.h
  src/Util/classIME.h
  src/Util/classLOG.h
  src/Util/classLUA.h
  src/Util/classMD5.h
  src/Util/classQUEUE.h
  src/Util/classSTB.h
  src/Util/classSTR.h
  src/Util/classTIME.h
  src/Util/classUTIL.h
  src/Util/ClipboardUtil.h
  src/Util/CMessageQ.h
  src/Util/CMMPlayer.h
  src/Util/CRangeTBL.h
  src/Util/CRawSOCKET.h
  src/Util/CshoSOCKET.h
  src/Util/CSocket.h
  src/Util/CSocketWND.h
  src/Util/CVector.h
  src/Util/CWaveFILE.h
  src/Util/DLLIST.h
  src/Util/FileVersionInfo.h
  src/Util/LIB_IJL.h
  src/Util/JDebugNew.h
  src/Util/JResourceContainer.h
  src/Util/JSingleton.h
  src/Util/Localizing.h
  src/Util/LogWnd.h
  src/Util/PacketHEADER.h
  src/Util/ResourceCache.h
  src/Util/RTTI.h
  src/Util/SLLIST.h
  src/Util/SystemInfo.h
  src/Util/SystemUtil.h
  src/Util/VFSManager.h
  src/Util/WndMsgQ.h
)

set( SOURCES_COMMON 
  ../common/CAssertNew.cpp
  ../common/CAssertNew.h
  ../common/MiniDumper.cpp
  ../common/MiniDumper.h
  ../common/Net_Prototype.h
)

set( SOURCES_MAIN
  src/winMAIN.cpp
  src/Ai_lib/AI_Action.cpp
  src/Ai_lib/AI_Condition.cpp
  src/Ai_lib/cai_file.cpp
  src/AppMsgQ.cpp
  src/BULLET.CPP
  src/CApplication.cpp
  src/CAvatarState.cpp
  src/CCamera.cpp
  src/CClientStorage.cpp
  src/CGameOBJ.cpp
  src/CJustModelAVT.cpp
  src/CModelCHAR.cpp
  src/CObjCART.cpp
  src/CObjCHAR.cpp
  src/CObjCHAR_ActionFrame.cpp
  src/CObjCHAR_Collision.cpp
  src/CObjFIXED.cpp
  src/CObjGROUND.cpp
  src/CObjMORPH.cpp
  src/CObjUSER.cpp
  src/CommandFilter.cpp
  src/Common/Calculation.cpp
  src/Common/CEconomy.cpp
  src/Common/CHotICON.cpp
  src/Common/CInventory.cpp
  src/Common/CItem.cpp
  src/Common/CObjAI.cpp
  src/Common/CQuest.cpp
  src/Common/cregenarea.cpp
  src/Common/CUserDATA.cpp
  src/Common/IO_AI.CPP
  src/Common/IO_Motion.cpp
  src/Common/IO_PAT.cpp
  src/Common/IO_Quest.cpp
  src/Common/IO_Skill.cpp
  src/Common/IO_STB.cpp
  src/Country.cpp
  src/CSkyDOME.cpp
  src/CViewMSG.cpp
  src/Debug.cpp
  src/Event/CEvent.cpp
  src/Event/Gf_effect.cpp
  src/Event/Gf_item.cpp
  src/Event/Gf_system.cpp
  src/Event/QF_CONVERSATION.CPP
  src/Event/QF_QUEST.CPP
  src/Event/QF_SKILL.CPP
  src/Event/QuestRewardQueue.cpp
  src/Game.cpp
  src/GameCommon/CDelegatedObservable.cpp
  src/GameCommon/CFilterWord.cpp
  src/GameCommon/CItemEquip.cpp
  src/GameCommon/CItemEtc.cpp
  src/GameCommon/CItemPat.cpp
  src/GameCommon/CItemUse.cpp
  src/GameCommon/CObservable.cpp
  src/GameCommon/CSkillCommand.cpp
  src/GameCommon/iconcommand.cpp
  src/GameCommon/IObserver.cpp
  src/GameCommon/Item.cpp
  src/GameCommon/itemcommand.cpp
  src/GameCommon/LngTbl.cpp
  src/GameCommon/ReloadProcess.cpp
  src/GameCommon/Skill.cpp
  src/GameCommon/StringManager.cpp
  src/GameData/CBank.cpp
  src/GameData/CChatRoom.cpp
  src/GameData/CClan.cpp
  src/GameData/CCommunity.cpp
  src/GameData/CDealData.cpp
  src/GameData/CDecomposition.cpp
  src/GameData/CExchange.cpp
  src/GameData/CGameDataCreateAvatar.cpp
  src/GameData/CManufacture.cpp
  src/GameData/CParty.cpp
  src/GameData/CPrivateStore.cpp
  src/GameData/CRequireMaterial.cpp
  src/GameData/CSeparate.cpp
  src/GameData/CStore.cpp
  src/GameData/CStoreUnion.cpp
  src/GameData/CUpgrade.cpp
  src/GameData/Event/CTEvenSkill.cpp
  src/GameData/Event/CTEvent.cpp
  src/GameData/Event/CTEventAvatarStore.cpp
  src/GameData/Event/CTEventChatRoom.cpp
  src/GameData/Event/CTEventClan.cpp
  src/GameData/Event/CTEventClanSkill.cpp
  src/GameData/Event/CTEventDeal.cpp
  src/GameData/Event/CTEventExchange.cpp
  src/GameData/Event/CTEventItem.cpp
  src/GameData/Event/CTEventManufacture.cpp
  src/GameData/Event/CTEventParty.cpp
  src/GameData/Event/CTEventPrivateStore.cpp
  src/GameData/Event/CTEventSeparate.cpp
  src/GameData/Event/CTEventServerList.cpp
  src/GameData/Event/CTEventSkill.cpp
  src/GameData/Event/CTEventStoreUnion.cpp
  src/GameData/Event/CTEventUpgrade.cpp
  src/GameData/ServerList.cpp
  src/GameProc/BGMManager.cpp
  src/GameProc/CallGM.cpp
  src/GameProc/CaptureChatList.cpp
  src/GameProc/CDayNNightProc.cpp
  src/GameProc/ChangeActionMode.cpp
  src/GameProc/ChangeVisibility.cpp
  src/GameProc/DelayedExp.cpp
  src/GameProc/ItemInfoView.cpp
  src/GameProc/LiveCheck.cpp
  src/GameProc/LoadingImageManager.cpp
  src/GameProc/MouseTargetEffect.cpp
  src/GameProc/ObjectTargetEffect.cpp
  src/GameProc/Objvibration.cpp
  src/GameProc/PreventDuplicatedCommand.cpp
  src/GameProc/SkillCommandDelay.cpp
  src/GameProc/TargetManager.cpp
  src/GameProc/UseItemDelay.cpp
  src/Game_FUNC.cpp
  src/Interface/CChatBox.cpp
  src/Interface/CClanMarkUserDefined.cpp
  src/Interface/CClanMarkView.cpp
  src/Interface/CDigitEffect.cpp
  src/Interface/CDragItem.cpp
  src/Interface/CDragNDropMgr.cpp
  src/Interface/CEnduranceProperty.cpp
  src/Interface/CHelpMgr.cpp
  src/Interface/CIndicate.cpp
  src/Interface/CInfo.cpp
  src/Interface/CKeyMove.cpp
  src/Interface/ClanMarkManager.cpp
  src/Interface/ClanMarkTransfer.cpp
  src/Interface/CLoading.cpp
  src/Interface/CNameBox.cpp
  src/Interface/Command/CTCmdHotExec.cpp
  src/Interface/Command/CTCmdNumberInput.cpp
  src/Interface/Command/CTCmdOpenDlg.cpp
  src/Interface/Command/DragCommand.cpp
  src/Interface/Command/EXUICOMMAND.cpp
  src/Interface/Command/UICommand.cpp
  src/Interface/controls/EffectString.cpp
  src/Interface/CTDrawImpl.cpp
  src/Interface/CTFontImpl.cpp
  src/Interface/CToolTipMgr.cpp
  src/Interface/CTSoundImpl.cpp
  src/Interface/CTString.cpp
  src/Interface/CUIMediator.cpp
  src/Interface/cursor/CCursor.cpp
  src/Interface/cursor/CCursorState.cpp
  src/Interface/cursor/CCursorStateDx.cpp
  src/Interface/cursor/CCursorStateSprite.cpp
  src/Interface/cursor/CCursorStateWindow.cpp
  src/Interface/DamageEffect.cpp
  src/Interface/DLGs/AvatarInfoDlg.cpp
  src/Interface/DLGs/BasePAN.cpp
  src/Interface/DLGs/CAddFriendDlg.cpp
  src/Interface/DLGs/CAvatarStore.cpp
  src/Interface/DLGs/CAvatarStoreDlg.cpp
  src/Interface/DLGs/CBankDlg.cpp
  src/Interface/DLGs/CBankWindowDlg.cpp
  src/Interface/dlgs/CChatFilterDlg.cpp
  src/Interface/DLGs/CChatRoomDlg.cpp
  src/Interface/DLGs/CClanDlg.cpp
  src/Interface/DLGs/CCommDlg.cpp
  src/Interface/DLGs/CDecompositionDlg.cpp
  src/Interface/DLGs/CDialogDlg.cpp
  src/Interface/DLGs/CGoodsDlg.cpp
  src/Interface/DLGs/CharacterDLG.cpp
  src/Interface/DLGs/ChattingDLG.cpp
  src/Interface/DLGs/CItemDlg.cpp
  src/Interface/DLGs/ClanOrganizeDlg.cpp
  src/Interface/DLGs/ClanRegistNotice.cpp
  src/Interface/DLGs/CMemoDlg.cpp
  src/Interface/DLGs/CMemoViewDlg.cpp
  src/Interface/DLGs/CMenuDlg.cpp
  src/Interface/DLGs/CMinimapDLG.cpp
  src/Interface/DLGs/CMsgBox.cpp
  src/Interface/DLGs/CMsgBoxCartRide.cpp
  src/Interface/DLGs/CMsgBoxSpecial.cpp
  src/Interface/DLGs/CNumberInputDlg.cpp
  src/Interface/DLGs/COptionDlg.cpp
  src/Interface/DLGs/CPartyDlg.cpp
  src/Interface/DLGs/CPartyMember.cpp
  src/Interface/DLGs/CPatDlg.cpp
  src/Interface/DLGs/CPrivateChatDlg.cpp
  src/Interface/DLGs/CPrivateStoreDlg.cpp
  src/Interface/DLGs/CQuestDlg.cpp
  src/Interface/DLGs/CRestartDLG.cpp
  src/Interface/DLGs/CSeparateDlg.cpp
  src/Interface/DLGs/CSkillDLG.cpp
  src/Interface/DLGs/CStoreDLG.cpp
  src/Interface/DLGs/CStoreUnionDlg.cpp
  src/Interface/DLGs/CSystemDLG.cpp
  src/Interface/DLGs/CSystemMsgDlg.cpp
  src/Interface/DLGs/CTargetMenu.cpp
  src/Interface/DLGs/CUpgradeDlg.cpp
  src/Interface/DLGs/DealDLG.cpp
  src/Interface/DLGs/DeliveryStoreDlg.cpp
  src/Interface/DLGs/EventDialog.cpp
  src/Interface/DLGs/ExchangeDLG.cpp
  src/Interface/DLGs/HelpDlg.cpp
  src/Interface/DLGs/InputNameDlg.cpp
  src/Interface/DLGs/InventoryDLG.cpp
  src/Interface/DLGs/MakeDLG.cpp
  src/Interface/DLGs/NotifyButtonDlg.cpp
  src/Interface/DLGs/NotifyDlg.cpp
  src/Interface/DLGs/PartyOptionDlg.cpp
  src/Interface/DLGs/QuickToolBAR.cpp
  src/Interface/DLGs/SelectEventDlg.cpp
  src/Interface/DLGs/SkillTreeDlg.cpp
  src/Interface/DLGs/SubClass/CChatRoomListItem.cpp
  src/Interface/DLGs/SubClass/CClanSkillListItem.cpp
  src/Interface/DLGs/SubClass/CDialogNpcScriptAnswerItem.cpp
  src/Interface/DLGs/SubClass/CDialogNpcScriptAnswerItemNew.cpp
  src/Interface/DLGs/SubClass/CDialogNpcScriptItem.cpp
  src/Interface/DLGs/SubClass/CFriendListItem.cpp
  src/Interface/DLGs/SubClass/CGuage.cpp
  src/Interface/DLGs/SubClass/ClanMark.cpp
  src/Interface/DLGs/SubClass/ClanMemberItem.cpp
  src/Interface/DLGs/SubClass/CMailBoxListItem.cpp
  src/Interface/DLGs/SubClass/CMakeState.cpp
  src/Interface/DLGs/SubClass/CMakeStateNormal.cpp
  src/Interface/DLGs/SubClass/CMakeStateResult.cpp
  src/Interface/DLGs/SubClass/CMakeStateWait.cpp
  src/Interface/DLGs/SubClass/CQuestListItem.cpp
  src/Interface/DLGs/SubClass/CSkillListCellRenderer.cpp
  src/Interface/DLGs/SubClass/CSkillListItem.cpp
  src/Interface/DLGs/SubClass/CSlot.cpp
  src/Interface/DLGs/SubClass/CUpgradeDlgState.cpp
  src/Interface/DLGs/SubClass/CUpgradeDlgStateNormal.cpp
  src/Interface/DLGs/SubClass/CUpgradeDlgStateResult.cpp
  src/Interface/DLGs/SubClass/CUpgradeDlgStateWait.cpp
  src/Interface/DLGs/TargetObjectDLG.cpp
  src/Interface/ExternalUI/CCreateAvata.cpp
  src/Interface/ExternalUI/CExternalUIManager.cpp
  src/Interface/ExternalUI/CLogin.cpp
  src/Interface/ExternalUI/CSelectAvata.cpp
  src/Interface/ExternalUI/CSelectChannel.cpp
  src/Interface/ExternalUI/CSelectServer.cpp
  src/Interface/ExternalUI/ExternalUILobby.cpp
  src/Interface/Icon/CIcon.cpp
  src/Interface/Icon/CIconDialog.cpp
  src/Interface/Icon/CIconItem.cpp
  src/Interface/Icon/CIconItemDelivery.cpp
  src/Interface/Icon/CIconQuick.cpp
  src/Interface/Icon/CIconSkill.cpp
  src/Interface/Icon/CIconSkillClan.cpp
  src/Interface/Icon/CIconSkillDummy.cpp
  src/Interface/IO_ImageRes.cpp
  src/Interface/ITState/CITState.cpp
  src/Interface/ITState/CITStateAppraisal.cpp
  src/Interface/itstate/CITStateDead.cpp
  src/Interface/ITState/CITStateNormal.cpp
  src/Interface/ITState/CITStateNpcDialog.cpp
  src/Interface/ITState/CITStateRepair.cpp
  src/Interface/ITState/CITStateRideCart.cpp
  src/Interface/ITState/CITStateWaitDisconnect.cpp
  src/Interface/it_mgr.cpp
  src/Interface/PersonalStoreManager.cpp
  src/Interface/slotcontainer/CItemSlot.cpp
  src/Interface/SlotContainer/ClanSkillSlot.cpp
  src/Interface/SlotContainer/CSkillSlot.cpp
  src/Interface/SlotContainer/HotIconSlot.cpp
  src/Interface/TypeResource.cpp
  src/IO_Basic.cpp
  src/IO_Effect.cpp
  src/IO_Event.cpp
  src/IO_MATERIAL.CPP
  src/IO_MESH.CPP
  src/IO_Model.cpp
  src/IO_Morpher.cpp
  src/IO_Skeleton.cpp
  src/IO_Terrain.cpp
  src/JCommandState.cpp
  src/LUA_Func.cpp
  src/LUA_Init.cpp
  src/Misc/GameUtil.cpp
  src/Network/CNetwork.cpp
  src/Network/RecvPACKET.cpp
  src/Network/SendPACKET.cpp
  src/ObjCastleGear.cpp
  src/OBJECT.cpp
  src/ObjectActionProcessor.cpp
  src/ObjectCommand/ObjCommand.cpp
  src/ObjFixedEvent.cpp
  src/Sfx/ISFX.cpp
  src/Sfx/SFXFont.cpp
  src/Sfx/SFXManager.cpp
  src/Sfx/SFXWideScreen.cpp
  src/Sfx/SmoothVisibility.cpp
  src/Sound/DirectMusicPlayer.cpp
  src/Sound/IO_Sound.cpp
  src/Sound/MSSMusicPlayer.cpp
  src/Sound/MusicMgr.cpp
  src/Sound/MusicPlayer.cpp
  src/Sound/OggMusicPlayer.cpp
  src/Sound/SoundPlayer.cpp
  src/SqliteDB.cpp
  src/System/CGame.cpp
  src/System/CGameState.cpp
  src/System/CGameStateCreateAvatar.cpp
  src/System/CGameStateExitMain.cpp
  src/System/CGameStateLogin.cpp
  src/System/CGameStateLoginVirtual.cpp
  src/System/CGameStateMain.cpp
  src/System/CGameStateMoveMain.cpp
  src/System/CGameStateNull.cpp
  src/System/CGameStatePrepareMain.cpp
  src/System/CGameStatePrepareSelectAvatar.cpp
  src/System/CGameStateReLogin.cpp
  src/System/CGameStateSelectAvatar.cpp
  src/System/CGameStateSelectSvr.cpp
  src/System/CGameStateTitle.cpp
  src/System/CGameStateWarp.cpp
  src/System/GameStateMovePlanet.cpp
  src/System/GameStateWarning.cpp
  src/System/SystemProcScript.cpp
  src/System/System_FUNC.cpp
  src/System/TCmdSystem.cpp
  src/Terrain/PatchManager.cpp
  src/Terrain/RoughMap.cpp
  src/Terrain/WideTerrain.cpp
  src/Tutorial/LevelUpEvent.cpp
  src/Tutorial/TutorialEvent.cpp
  src/Tutorial/TutorialEventManager.cpp
  src/Tutorial/TutorialEventUtility.cpp
  src/Util/ADSStream.cpp
  src/Util/Arcfour/Arcfour.cpp
  src/Util/CCheat.cpp
  src/Util/CD3DUtil.cpp
  src/Util/CDSound.cpp
  src/Util/CFileSystemNormal.cpp
  src/Util/CFileSystemTriggerVFS.cpp
  src/Util/CGameSTB.cpp
  src/Util/CGameStr.cpp
  src/Util/CheckHack.cpp
  src/Util/classCRC.cpp
  src/Util/classLUA.cpp
  src/Util/classTIME.cpp
  src/Util/ClipboardUtil.cpp
  src/Util/CMessageQ.cpp
  src/Util/CMMPlayer.cpp
  src/Util/CRangeTBL.cpp
  src/Util/CWaveFILE.cpp
  src/Util/FileVersionInfo.cpp
  src/Util/JDebugNew.cpp
  src/Util/JResourceContainer.cpp
  src/Util/Localizing.cpp
  src/Util/ResourceCache.cpp
  src/Util/SystemInfo.cpp
  src/Util/SystemUtil.cpp
  src/Util/VFSManager.cpp
  src/Util/WndMsgQ.cpp
)
#Client.ico
#small.ico 
set( RESOURCE_FILES
  res/Client.rc
)

set_source_files_properties(${RESOURCE_FILES} PROPERTIES LANGUAGE RC)
add_executable(${PROJECT} src/stdafx.cpp ${SOURCES_HEADER} ${SOURCES_MAIN} ${SOURCES_COMMON} ${RESOURCE_FILES})
set_target_properties(${PROJECT} PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "src/stdafx.h")

#TODO:: Build IJL15.lib
target_link_libraries(${PROJECT} PRIVATE lua::lua5)
target_link_libraries(${PROJECT} PRIVATE utils::ijl15)
target_link_libraries(${PROJECT} PRIVATE TriggerInfo)
target_link_libraries(${PROJECT} PRIVATE TGameCtrl)
target_link_libraries(${PROJECT} PRIVATE znzin)

if (COMMAND cotire)
  cotire(${PROJECT})
endif()
